# landsat-lake-clarity-adirondack

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_pipeline.ipynb  01_audit.ipynb  02_select_lakes.ipynb  03_features.ipynb  04_train.ipynb  05_predict.ipynb  06_validate.ipynb  07_deliver.ipynb
src/lakeclarity/: __init__.py  audit.py  config.py  deliver.py  eda.py  edi.py  explore.py  features.py  gee.py  harmonize.py  locus.py  predict.py  selection.py  validate.py  viz.py  wqp.py
tests/: test_audit.py  test_deliver.py  test_eda.py  test_explore.py  test_harmonize.py  test_predict.py  test_schema.py  test_selection.py  test_validate.py
tests/fixtures/: matchups_sample.csv
