[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeclarity"
version = "0.1.0"
description = "Regionally-calibrated Landsat Secchi-depth model for Adirondack lakes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "requests>=2.28",
    "joblib>=1.3",
    "tqdm>=4.65",
]

[project.optional-dependencies]
geo = ["geopandas>=0.14"]
gee = ["earthengine-api>=0.1.380"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
